devscripts (2.10.49) UNRELEASED; urgency=low

  * debchange: Use == for numeric comparison, not eq.
  * getbuildlog: Add a missing "use lib" to allow the special "last" and
    "last-all" versions to work correctly.  Thanks, Iustin Pop.
    (Closes: #523982)
  * licensecheck: Add detection of the AGPL.  Thanks, Didier Raboud.
    (Closes: #520903)
  * rmadison: Allow a default URL to be specified in the configuration file.
    Thanks, Roland Mas.  (Closes: #524198)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 12 Apr 2009 16:20:10 +0100

devscripts (2.10.48) unstable; urgency=low

  [ Adam D. Barratt ]
  * Update Standards Version to 3.8.1 (no changes required)
  * debchange: Fix a couple of syntax errors in the "does an orig tarball
    exist?" test introduced for #500932.
  * debdiff:
    + Don't bail if diff returned an exit status of 2 when comparing
      files. If there are binary files in either of the trees being compared
      then that's expected as the files can't be reliably compared.
    + Don't claim that the exit status on failure will be anything other than
      255 (i.e. the result of die()ing).
  * nmudiff: Adapt to handle the fact that debdiff will now return an exit
    status of 1 when comparing non-identical source packages.
  * debian/copyright: Explicitly refer to the GPL-2 and GPL-3 common license
    files rather than the "GPL" symlink.

  [ Patrick Schoenfeld ]
  * debchange: When renaming a directory (because of version change)
    and noticing that no matching orig tarball exist, emit a warning.
    (Closes: #500932)
  * uscan: Use maximum compression rate while repacking files from bzip2/zip
    into gzip. Thanks Nelson A. de Oliveira.
    (Closes: #522442)

  [ James Vega ]
  * debchange: As per the other edit flags, do not modify the original
    changelog when using `debchange -r' unless the user saves the temporary
    changelog.  (Closes: #422450)
