@@ -6,6 +6,9 @@ devscripts (2.10.49) UNRELEASED; urgency=low
     (Closes: #523982)
   * licensecheck: Add detection of the AGPL.  Thanks, Didier Raboud.
     (Closes: #520903)
+  * rc-alert: Allow the generated list of bugs to be restricted to those
+    affecting packages with particular debtags facets.  Thanks, Jan Hauke
+    Rahm.  (Closes: #523523)
   * rmadison: Allow a default URL to be specified in the configuration file.
     Thanks, Roland Mas.  (Closes: #524198)
 
